# magloop_pico_code_2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  magloop_pico.cpp  upload
AccelStepper/: AccelStepper.cpp  AccelStepper.h  CMakeLists.txt  LICENSE
Adafruit-GFX-Library/: Adafruit_GFX.cpp  Adafruit_GFX.h  CMakeLists.txt  README.md  gfxfont.h  glcdfont.c  license.txt
Adafruit-GFX-Library/Fonts/: FreeMono12pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold9pt7b.h  FreeSerif12pt7b.h  FreeSerif24pt7b.h  FreeSerif9pt7b.h
Adafruit_ILI9341/: Adafruit_ILI9341.cpp  Adafruit_ILI9341.h  CMakeLists.txt
Adafruit_SPITFT/: Adafruit_SPITFT.cpp  Adafruit_SPITFT.h  CMakeLists.txt  LICENSE
Button/: Button.cpp  Button.h  CMakeLists.txt
DDS/: CMakeLists.txt  DDS.cpp  DDS.h
Data/: CMakeLists.txt  Data.cpp  Data.h
DisplayManagement/: CMakeLists.txt  DisplayManagement.cpp  DisplayManagement.h
DisplayUtility/: CMakeLists.txt  DisplayUtility.cpp  DisplayUtility.h
EEPROM/: CMakeLists.txt  EEPROM.cpp  EEPROM.h
FrequencyInput/: CMakeLists.txt  FrequencyInput.cpp  FrequencyInput.h
GraphPlot/: CMakeLists.txt  GraphPlot.cpp  GraphPlot.h
Hardware/: CMakeLists.txt  Hardware.cpp  Hardware.h
Rotary/: CMakeLists.txt  Rotary.cpp  Rotary.h
SWR/: CMakeLists.txt  SWR.cpp  SWR.h
StepperManagement/: CMakeLists.txt  StepperManagement.cpp  StepperManagement.h
TmcStepper/: CMakeLists.txt  TmcStepper.cpp  TmcStepper.h
TuneInputs/: CMakeLists.txt  TuneInputs.cpp  TuneInputs.h
arduino_includes/: Arduino.h  CMakeLists.txt  LICENSE  Print.cpp
